# amplifier-module-hooks-concise-display

./: LICENSE  README.md  pyproject.toml
amplifier_module_hooks_concise_display/: __init__.py
